vários erros consertados e links adicionados

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 				<div class="box-menu">
 					<img class="logo-menu" src="./assets/img/menu_hamburguer.png">
 					<ul class="lista-menu">
-						<li class="item-menu">sobre</li>
-						<li class="item-menu">atividades</li>
-						<li class="item-menu">impacto</li>
-						<li class="item-menu">parceiros</li>
-						<li class="item-menu">contato</li>
+						<li class="item-menu"><a href="#SOBRE">sobre</li></a>
+						<li class="item-menu"><a href="#ATIVIDADES">atividades</li></a>
+						<li class="item-menu"><a href="#IMPACTO">impacto</li></a>
+						<li class="item-menu"><a href="#PARCEIROS">parceiros</li></a>
+						<li class="item-menu"><a href="#CONTATO">contato</li></a>
 					</ul>
 				</div>
 			</nav>
 		</header>
 		<main>
-			<section class="box-inicio">
+			<section class="box-inicio" id="SOBRE">
 				<div class="box-conteudo">
 					<figure class="conteiner-foto">
 						<img class= "logo-principal" src="./assets/img/logo.png">
@@ -36,7 +36,7 @@
 					<img class="foto-final" src="./assets/img/img3.png">
 				</div>
 			</section>
-			<section class="conteiner-icones">
+			<section class="conteiner-icones" id="ATIVIDADES">
 				<h1 class="title-important">ATIVIDADES</h1>
 				<ul class="menu-social">
 					<li class="item-alfabetização"><img class="icone" src="./assets/img/alfabetização.svg">Alfabetização</li>
@@ -49,7 +49,7 @@
 					<li class="item-capoeira"><img class="icone" src="./assets/img/capoeira.svg">Capoeira</li>
 				</ul>
 			</section>
-			<section class="box-impacto">
+			<section class="box-impacto" id="IMPACTO">
 				<div class="box-paragrafo">
 					<h2 class="title-impact">IMPACTO</h2>
 					<p class="paragrafo-depoimento">Com uma equipe composta apenas por voluntários conseguimos atender uma média de 60 pessoas em nossas atividades. Esse impacto pode ser ainda maior com a sua colaboração.!</p>
@@ -58,7 +58,7 @@
 					<img class="foto-impacto"src="./assets/img/impacto.png">
 				</figure>
 			</section>
-			<section class="box-parceria">
+			<section class="box-parceria" id="PARCEIROS">
 				<h2 class="title-friends">PARCEIROS</h2>
 				<ul class="menu-parceria">
 					<li class="icone-sesc"><img class="image-sesc" src="./assets/img/sesc.png"></li>
@@ -69,7 +69,7 @@
 					<li class="icone-hashi"><img class="image-hashi" src="./assets/img/hashi.png"><p class="text-hashi">Hashi Dourado</p></li>
 				</ul>
 			</section>
-			<section class="box-contact">
+			<section class="box-contact" id="CONTATO">
 				<figure class="conteiner-photography">
 					<img class="photography" src="./assets/img/img_contato.png">
 				</figure>
