css rajustado algumas modificações feitas

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
-		<header class="conteiner-menu">
+		<header>
+			<div class="conteiner-menu"></div>
 			<nav class="conteiner-navegação">
 				<div class="box-menu">
 					<img class="logo-menu" src="./assets/img/menu_hamburguer.png">
+					<img class= "logo-principal" src="./assets/img/logo.png">
 					<ul class="lista-menu">
 						<li class="item-menu"><a href="#SOBRE">sobre</li></a>
 						<li class="item-menu"><a href="#ATIVIDADES">atividades</li></a>
@@ -25,9 +27,6 @@
 		<main>
 			<section class="box-inicio" id="SOBRE">
 				<div class="box-conteudo">
-					<figure class="conteiner-foto">
-						<img class= "logo-principal" src="./assets/img/logo.png">
-					</figure>
 					<p class="texto-apresentação">O Centro Cultural Oca dos Curumins, teve suas atividades iniciadas em abril do ano de 1977,focadas em educação.Hoje em dia trabalhamos com educação, cultura, esporte, artesanato e atendimento às famílias em busca de auxílio seja na área jurídica ou não.</p>
 				</div>
 				<div class="box-images">
