adicionado link no logo final vnw

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		<footer class="conteiner-final">
 			<p class="final-text">Desenvolvido por</p>
 			<figure class="logo-final">
-				<img class="logo-vnw" src="./assets/img/logo_vnw.png">
+				<a href="https://www.vainaweb.com.br/"target="_blank"><img class="logo-vnw" src="./assets/img/logo_vnw.png"></a>
 			</figure>
 		</footer>
 	</body>
