modificações no css e html

--- a/index.html
+++ b/index.html
@@ -49,13 +49,15 @@
 				</ul>
 			</section>
 			<section class="box-impacto" id="IMPACTO">
-				<div class="box-paragrafo">
-					<h2 class="title-impact">IMPACTO</h2>
-					<p class="paragrafo-depoimento">Com uma equipe composta apenas por voluntários conseguimos atender uma média de 60 pessoas em nossas atividades. Esse impacto pode ser ainda maior com a sua colaboração.!</p>
+				<div class="box-impact">
+					<div class="box-paragrafo">
+						<h2 class="title-impact">IMPACTO</h2>
+						<p class="paragrafo-depoimento">Com uma equipe composta apenas por voluntários conseguimos atender uma média de 60 pessoas em nossas atividades. Esse impacto pode ser ainda maior com a sua colaboração.!</p>
+					</div>
+					<figure class="conteiner-image">
+						<img class="foto-impacto"src="./assets/img/impacto.png">
+					</figure>
 				</div>
-				<figure class="conteiner-image">
-					<img class="foto-impacto"src="./assets/img/impacto.png">
-				</figure>
 			</section>
 			<section class="box-parceria" id="PARCEIROS">
 				<h2 class="title-friends">PARCEIROS</h2>
@@ -69,15 +71,17 @@
 				</ul>
 			</section>
 			<section class="box-contact" id="CONTATO">
-				<figure class="conteiner-photography">
-					<img class="photography" src="./assets/img/img_contato.png">
-				</figure>
-				<div class="conteiner-contato">
-					<h2 class="title-contact">CONTATO</h2>
-					<p class="text-phones">(21)98854-1893 (21)3071-6750</p>
-					<p class="text-email">tiabete2008@gmail.com betes_aparecida@hotmail.com ccocococadoscurumins@hotmail.com</p>
-					<p class="text-address">Estrada do Itararé, 480 fundos Travessa São José, 13</p>
-					<p class="text-avenue">Avenida Itaóca, 2353 fundo B(anexo)</p>
+				<div class="box-contato">
+					<figure class="conteiner-photography">
+						<img class="photography" src="./assets/img/img_contato.png">
+					</figure>
+					<div class="conteiner-contato">
+						<h2 class="title-contact">CONTATO</h2>
+						<p class="text-phones">(21)98854-1893 (21)3071-6750</p>
+						<p class="text-email">tiabete2008@gmail.com betes_aparecida@hotmail.com ccocococadoscurumins@hotmail.com</p>
+						<p class="text-address">Estrada do Itararé, 480 fundos Travessa São José, 13</p>
+						<p class="text-avenue">Avenida Itaóca, 2353 fundo B(anexo)</p>
+					</div>
 				</div>
 			</section>
 		</main>
