adicionado arquivo js e menu hamburguer funcional

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 			<div class="conteiner-menu"></div>
 			<nav class="conteiner-navegação">
 				<div class="box-menu">
-					<img class="logo-menu" src="./assets/img/menu_hamburguer.png">
+					<img class="logo-menu" id="menu-img" src="./assets/img/menu_hamburguer.png">
 					<img class= "logo-principal" src="./assets/img/logo.png">
-					<ul class="lista-menu">
-						<li class="item-menu"><a href="#SOBRE">sobre</li></a>
-						<li class="item-menu"><a href="#ATIVIDADES">atividades</li></a>
-						<li class="item-menu"><a href="#IMPACTO">impacto</li></a>
-						<li class="item-menu"><a href="#PARCEIROS">parceiros</li></a>
-						<li class="item-menu"><a href="#CONTATO">contato</li></a>
+					<ul id="lista-menu" class="menu-lista">
+						<li class="item-menu" id="item-menu1"><a href="#SOBRE">sobre</li></a>
+						<li class="item-menu" id="item-menu2"><a href="#ATIVIDADES">atividades</li></a>
+						<li class="item-menu" id="item-menu3"><a href="#IMPACTO">impacto</li></a>
+						<li class="item-menu" id="item-menu4"><a href="#PARCEIROS">parceiros</li></a>
+						<li class="item-menu" id="item-menu5"><a href="#CONTATO">contato</li></a>
 					</ul>
 				</div>
 			</nav>
@@ -91,5 +91,6 @@
 				<a href="https://www.vainaweb.com.br/"target="_blank"><img class="logo-vnw" src="./assets/img/logo_vnw.png"></a>
 			</figure>
 		</footer>
+		<script src="./assets/js/menu.js"></script>
 	</body>
 </html>
